--- a/app/build.gradle
+++ b/app/build.gradle
@@ -111,6 +111,8 @@ dependencies {
     def lifecycle_version = "2.3.1"
 
     annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
+    implementation 'androidx.core:core-splashscreen:1.0.0-beta02'
+
 
 
 
