--- a/app/build.gradle
+++ b/app/build.gradle
@@ -117,6 +117,9 @@ dependencies {
 
     //Picaasso
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.airbnb.android:lottie:5.2.0'
+
+
 
 
 
